# multi-aircraft-adsb-tracker

./: .gitignore  PROJECT_PLAN.md  README.md
.github/workflows/: ci.yml
backend/: __init__.py  app.py  bridge.py  feeds.py  requirements.txt
backend/tests/: test_api.py  test_bridge.py
cpp/: CMakeLists.txt
cpp/include/adsb/: association.hpp  csv_replay.hpp  json_out.hpp  kalman_filter.hpp  measurement.hpp  track.hpp  track_manager.hpp
cpp/src/: association.cpp  csv_replay.cpp  json_out.cpp  kalman_filter.cpp  main.cpp  stream_main.cpp  track_manager.cpp
cpp/tests/: test_main.cpp
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  styles.css  types.ts  useTrackStream.ts
dashboard/src/components/: AirPicture.tsx  MetricsBar.tsx  TrackTable.tsx
data/: generate_sample.py  sample_adsb.csv  session_live_columbus.csv  session_sim.csv
docs/: ARCHITECTURE.md
ingest/: __init__.py  cli.py  net.py  opensky.py  readsb.py  recorder.py  replayer.py  session.py  simsource.py
ingest/tests/: test_opensky.py  test_readsb.py  test_recorder.py  test_replayer.py
